<resources>
    <string name="app_name">MovieCatalogue2</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="rating">Rating</string>
    <string name="release">Release</string>
    <string name="adult">Adult</string>
    <string name="popularity">Popularity</string>
    <string name="descriptions">Descriptions</string>
    <string name="detail">Detail</string>
    <string name="change_language">Change Language</string>
    <string name="added">Added</string>
    <string name="already_on_database">Already on Database</string>
    <string name="deleted">Deleted</string>
    <string name="favourite">Favourite</string>
    <string name="search">Search</string>
    <string name="find_movies">Find Movie</string>

</resources>
